# g2o_learn

four_pts/: CMakeLists.txt  \  four_pts.cpp
